# USMA_Hivemine

./: ACSHW_SETUP.md  DC_HWNetwork_SETUP.md  GCS_DC_Network_Setup.md  README.md  ubuntu_command.txt  wifi_config.sh
flight_test/: CMakeLists.txt  package.xml  setup.py
flight_test/scripts/: Lissajous_pattern.py  Output_Path.csv  Output_Path_lawnmower.csv  Output_Path_safe.csv  circular_pattern.py  data_collector.py  safe_path.py  yawonly_pattern.py
flight_test/scripts/old/: Lissajous_pattern_localpose.py  Lissajous_pattern_origin.py
flight_test/src/: flight_mode.cpp  mode_input.cpp
vision_processing/: img_process_node.py
vision_processing/pictures/: centroids.json  output.avi
